# cpp-hw-template

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: build-test.yml  classroom.yml  codeql.yml
include/: main.h
src/: exercise.c  exercise.cpp  main.c  main.cpp
